[package]
name = "thump"
version = "0.1.0"
authors = ["jonas breen <jonasebreen@gmail.com>"]
edition = "2021"
description = "music player"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
