[package]
name = "thump"
version = "0.1.0"
authors = ["jonas breen <jonasebreen@gmail.com>"]
edition = "2021"
description = "music player"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13.1", features = ["svg", "advanced", "canvas", "tokio"] }
lazy_static = "1.5.0"
lofty = "0.21.1"
rhai = { version = "1.20.1", features = [] }
rodio = { version = "0.20.1", features = ["symphonia-flac"] }
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
tokio = { version = "1", features = ["full"] }
